--- a/PDFViewer/ASP.NET MVC Razor Examples/Web.config
+++ b/PDFViewer/ASP.NET MVC Razor Examples/Web.config
@@ -17,7 +17,7 @@
     </compilation>
     <httpRuntime targetFramework="4.7.2" />
     <httpHandlers>
-      <add verb="*" path="captimage.axd" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=20.1450.0.55, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
+      <add verb="*" path="captimage.axd" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=26.2450.10, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
     </httpHandlers>
     <pages>
       <namespaces>
@@ -32,7 +32,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.1.0" newVersion="13.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -56,7 +56,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-20.1450.0.55" newVersion="20.1450.0.55" />
+        <bindingRedirect oldVersion="0.0.0.0-26.2450.10.0" newVersion="26.2450.10.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Pdf.Base" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-26.2450.10.0" newVersion="26.2450.10.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -70,7 +74,7 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
-      <add verb="*" path="captimage.axd" name="syncfusion_generatetools" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=20.1450.0.55, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
+      <add verb="*" path="captimage.axd" name="syncfusion_generatetools" type="Syncfusion.JavaScript.ImageHandler, Syncfusion.EJ, Version=26.2450.10, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89" />
     </handlers>
   </system.webServer>
 </configuration>
