--- a/PDFViewer/ASP.NET MVC Razor Examples/packages.config
+++ b/PDFViewer/ASP.NET MVC Razor Examples/packages.config
@@ -13,11 +13,11 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
-  <package id="Syncfusion.Compression.Base" version="26.2.10" targetFramework="net472" />
-  <package id="Syncfusion.EJ2.JavaScript" version="26.2.10" targetFramework="net472" />
-  <package id="Syncfusion.EJ2.MVC5" version="26.2.10" targetFramework="net472" />
-  <package id="Syncfusion.EJ2.PdfViewer.AspNet.Mvc5" version="26.2.10" targetFramework="net472" />
-  <package id="Syncfusion.Licensing" version="26.2.10" targetFramework="net472" />
-  <package id="Syncfusion.Pdf.AspNet.Mvc5" version="26.2.10" targetFramework="net472" />
+  <package id="Syncfusion.Compression.Base" version="*" targetFramework="net472" />
+  <package id="Syncfusion.EJ2.JavaScript" version="*" targetFramework="net472" />
+  <package id="Syncfusion.EJ2.MVC5" version="*" targetFramework="net472" />
+  <package id="Syncfusion.EJ2.PdfViewer.AspNet.Mvc5" version="*" targetFramework="net472" />
+  <package id="Syncfusion.Licensing" version="*" targetFramework="net472" />
+  <package id="Syncfusion.Pdf.AspNet.Mvc5" version="*" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
